# conan-gdal

./: .travis.yml  README.md  build.py  conanfile.py
.github/workflows/: main.yml
test_package/: CMakeLists.txt  conanfile.py
test_package_ignore/: CMakeLists.txt
